--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,32 +1,1 @@
-name: Deploy to Cocoapods
-
-on:
-  release:
-    types:
-      - published
-  workflow_dispatch:
-
-jobs:
-  build:
-    runs-on: macOS-latest
-
-    steps:
-      - name: Checkout master
-        uses: actions/checkout@master
-        with:
-          ref: "master"
-
-      - name: Install Ruby
-        uses: ruby/setup-ruby@v1
-
-      - name: Install dependencies
-        run: |
-          gem install cocoapods
-
-      - name: Push to cocoapods
-        run: |
-          set -eo pipefail
-          pod lib lint --allow-warnings
-          pod trunk push --allow-warnings
-        env:
-          COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}
+# Workflow disabled
